Fix compilation error - java 10 api used instead of java 8